# backend/alembic/versions/20250718_0716-178c6a8ea923_add_download_model.py
@@ -1,0 +1,48 @@
+"""add download model
+
+Revision ID: 178c6a8ea923
+Revises: 9606084facbe
+Create Date: 2025-07-18 07:16:42.925074
+
+"""
+
+from typing import Sequence, Union
+
+from alembic import op
+import sqlalchemy as sa
+import sqlmodel
+import sqlmodel.sql.sqltypes
+from app_logger import ModuleLogger
+
+
+# revision identifiers, used by Alembic.
+revision: str = "178c6a8ea923"
+down_revision: Union[str, None] = "9606084facbe"
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+logger = ModuleLogger("AlembicMigrations")
+
+
+def upgrade() -> None:
+    # Disable foreign keys temporarily for migrations
+    op.execute("PRAGMA foreign_keys=OFF")
+
+    # ### commands auto generated by Alembic - please adjust! ###
+    pass
+    # ### end Alembic commands ###
+
+    # Re-enable foreign keys after migrations
+    op.execute("PRAGMA foreign_keys=ON")
+
+
+def downgrade() -> None:
+    # Disable foreign keys temporarily for migrations
+    op.execute("PRAGMA foreign_keys=OFF")
+
+    # ### commands auto generated by Alembic - please adjust! ###
+    pass
+    # ### end Alembic commands ###
+
+    # Re-enable foreign keys after migrations
+    op.execute("PRAGMA foreign_keys=ON")
