# backend/alembic/versions/20250718_0735-19d5fca9612f_add_download_model.py
@@ -1,0 +1,92 @@
+"""add download model
+
+Revision ID: 19d5fca9612f
+Revises: 178c6a8ea923
+Create Date: 2025-07-18 07:35:46.433926
+
+"""
+
+from typing import Sequence, Union
+
+from alembic import op
+import sqlalchemy as sa
+import sqlmodel
+import sqlmodel.sql.sqltypes
+from app_logger import ModuleLogger
+
+
+# revision identifiers, used by Alembic.
+revision: str = "19d5fca9612f"
+down_revision: Union[str, None] = "178c6a8ea923"
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+logger = ModuleLogger("AlembicMigrations")
+
+
+def upgrade() -> None:
+    # Disable foreign keys temporarily for migrations
+    op.execute("PRAGMA foreign_keys=OFF")
+
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.create_table(
+        "download",
+        sa.Column("path", sqlmodel.sql.sqltypes.AutoString(), nullable=False),
+        sa.Column(
+            "file_name", sqlmodel.sql.sqltypes.AutoString(), nullable=False
+        ),
+        sa.Column("size", sa.Integer(), nullable=False),
+        sa.Column("updated_at", sa.DateTime(), nullable=False),
+        sa.Column(
+            "resolution", sqlmodel.sql.sqltypes.AutoString(), nullable=False
+        ),
+        sa.Column(
+            "video_format", sqlmodel.sql.sqltypes.AutoString(), nullable=False
+        ),
+        sa.Column(
+            "audio_format", sqlmodel.sql.sqltypes.AutoString(), nullable=False
+        ),
+        sa.Column(
+            "audio_channels",
+            sqlmodel.sql.sqltypes.AutoString(),
+            nullable=False,
+        ),
+        sa.Column(
+            "file_format", sqlmodel.sql.sqltypes.AutoString(), nullable=False
+        ),
+        sa.Column("duration", sa.Integer(), nullable=False),
+        sa.Column(
+            "subtitles", sqlmodel.sql.sqltypes.AutoString(), nullable=False
+        ),
+        sa.Column("added_at", sa.DateTime(), nullable=False),
+        sa.Column("profile_id", sa.Integer(), nullable=False),
+        sa.Column(
+            "youtube_id", sqlmodel.sql.sqltypes.AutoString(), nullable=False
+        ),
+        sa.Column("file_exists", sa.Boolean(), nullable=False),
+        sa.Column("id", sa.Integer(), nullable=False),
+        sa.Column("media_id", sa.Integer(), nullable=False),
+        sa.ForeignKeyConstraint(
+            ["media_id"],
+            ["media.id"],
+            name=op.f("fk_download_media_id_media"),
+            ondelete="CASCADE",
+        ),
+        sa.PrimaryKeyConstraint("id", name=op.f("download_pkc")),
+    )
+    # ### end Alembic commands ###
+
+    # Re-enable foreign keys after migrations
+    op.execute("PRAGMA foreign_keys=ON")
+
+
+def downgrade() -> None:
+    # Disable foreign keys temporarily for migrations
+    op.execute("PRAGMA foreign_keys=OFF")
+
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.drop_table("download")
+    # ### end Alembic commands ###
+
+    # Re-enable foreign keys after migrations
+    op.execute("PRAGMA foreign_keys=ON")
